# legendary-compiler

./: CMakeLists.txt  Generation.cpp  Generation.h  IdTable.cpp  IdTable.h  LexicalAnalysis.cpp  LexicalAnalysis.h  Operands.cpp  Operands.h  Operations.cpp  Operations.h  PolizQueue.cpp  PolizQueue.h  README.MD  enums.cpp  input-bak.txt  input.txt  lexem_types.cpp  lexem_types.h  lexical_analysis.cpp  lexical_analysis.h  main.cpp  output.txt  poliz.h  syntax_analysis.cpp  syntax_analysis.h  types.cpp
tests/: 1.in  2.in  3.in  outputs.txt
